Update .env.example to clarify OWNER_NUMBER format

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_NAME=your_db_name
 DB_HOST=your_db_host
 DB_USER=your_db_user
 
-# Set to your own whatsapp number (with country code and without) ps: not the bot number
+# Set to your own whatsapp number with country code and without '+' (not the bot's number)
 OWNER_NUMBER=6281234567890
 
 # Set to 'info' to see the logs (for debugging)
